--- a/saint-of-water/public/index.html
+++ b/saint-of-water/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="RCCG. Saint of Water Parish"
+      content="RCCG. Scent of Water Parish"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/sowlogo.png" />
     <!--
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>RCCG-Saint of Water</title>
+    <title>Scent of Water Parish
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
